--- a/invitacion-ana-perez.html
+++ b/invitacion-ana-perez.html
@@ -93,10 +93,11 @@
     <script>
         // Redirigir después de 4 segundos (4000 milisegundos)
         setTimeout(function() {
-            window.location.href = "https://www.google.com";
+            window.location.href = "https://www.jw.org";
         }, 4000);
     </script>
 </body>
 </html>
+
 
 
